# try_flet

./: README.md  main.py  pyproject.toml
try_flet/: main.py
try_flet/ui_component/: prediction_save_btn.py  team_with_count_scores.py
